# imgdb

./: LICENSE  Pipfile  README.md  imdb_data_handler.py  imgdb_config_template.yaml  requirements.txt  results.json  rt_movie_cover.code-workspace  rt_parser.py  setup.cfg
imgdb/: config.py  exceptions.py  image_processor.py  imdb_data_handler.py  imdb_poster_fetcher.py  rt_parser.py  utils.py
tests/: README.md  test_config.py  test_utils.py
