[metadata]
name = imgdb
version = 0.8.0
author = Yusuf Felly
author_email = youssef@felliaui.email
description = An IMDb command-line front-end that displays information about a specific title and downloads its poster
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/bbarcesaj125/imgdb
project_urls =
    Bug Tracker = https://github.com/bbarcesaj125/imgdb/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux

[options]
packages = find:
python_requires = >=3.10
install_requires =
    beautifulsoup4
    click
    pandas
    PyYAML
    tqdm
    Wand

[options.package_data]
* = *.png

[options.entry_points]
console_scripts =
    imgdb = imgdb.rt_parser:imdb_cli_init